--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-.\.venv\Scripts\Activate.ps1 
-Set-ExecutionPolicy -Scope CurrentUser -ExecutionPolicy RemoteSigned
-pip install selenium
-pip install pytest
-pip install requests
-pip install allure-pytest
-pip install json
-pip install jsonschema
+#.\.venv\Scripts\Activate.ps1 
+#Set-ExecutionPolicy -Scope CurrentUser -ExecutionPolicy RemoteSigned
+selenium
+pytest
+requests
+allure-pytest
+jsonschema
+setuptools
 
 
-$env:x-api-key="reqres-free-v1"
-$env:BASE_URL="https://a404cb5b-fc3a-46d1-a8cc-6f72f08d71db.mock.pstmn.io"
-$env:PYTHONPATH="C:\Users\eksri\NMMProject\APIProject"  
+#$env:x-api-key="reqres-free-v1"
+#$env:BASE_URL="https://a404cb5b-fc3a-46d1-a8cc-6f72f08d71db.mock.pstmn.io"
+#$env:PYTHONPATH="C:\Users\eksri\NMMProject\APIProject"  
