--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ requests
 allure-pytest
 jsonschema
 setuptools
-
+dotenv
 
 #$env:x-api-key="reqres-free-v1"
 #$env:BASE_URL="https://a404cb5b-fc3a-46d1-a8cc-6f72f08d71db.mock.pstmn.io"
